<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/fifteen"
    android:background="@color/content_background_color" >
    <EditText 
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty"
        android:background="@drawable/bg_edit_blue"
        android:hint="@string/hint_usernames"
        android:paddingLeft="@dimen/ten"
        android:textColorHint="@color/text_light"/>
    <RadioGroup 
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/ten">
        <RadioButton 
	        android:layout_width="0.0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:layout_marginRight="@dimen/ten"
	        android:background="@drawable/bg_edit_blue"
	        android:text="@string/money_ten"
	        android:button="@null"/>
        <RadioButton 
	        android:layout_width="0.0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:layout_marginLeft="@dimen/five"
	        android:layout_marginRight="@dimen/five"
	        android:background="@drawable/bg_edit_blue"
	        android:text="@string/money_thirty"
	        android:button="@null"/>
        <RadioButton 
	        android:layout_width="0.0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:layout_marginLeft="@dimen/ten"
	        android:background="@drawable/bg_edit_blue"
	        android:text="@string/money_fifty"
	        android:button="@null"/>
    </RadioGroup>
    <TextView 
        android:id="@+id/alipay_allow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty"
        android:gravity="center_vertical|right"
        android:text="@string/alipay_allow2"
        android:textColor="@color/btn_dgrey"/>
    <Button 
        android:layout_width="match_parent"
        android:layout_height="@dimen/thirty_five"
        android:background="@drawable/bg_round_grey"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/btn_calling"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty"
        android:gravity="center"
        android:textColor="@color/grey"
        android:text="@string/text_alipay"/>
    
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="@dimen/forty_five"
	    android:orientation="horizontal">
	    <Button 
	        android:id="@+id/go_advice"
	        android:layout_width="@dimen/one_hundred"
	        android:layout_height="@dimen/forty_five"
	        android:background="@drawable/bg_round_red"
	        android:textColor="@color/white"
	        android:gravity="center"
	        android:text="@string/go_advice"/>
	    <View 
	        android:layout_width="0.0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="1"/>
	    <Button 
	        android:id="@+id/go_share"
	        android:layout_width="@dimen/one_hundred"
	        android:layout_height="@dimen/forty_five"
	        android:background="@drawable/bg_round_green"
	        android:textColor="@color/white"
	        android:gravity="center"
	        android:text="@string/go_share"/>
	</LinearLayout>
</LinearLayout>