<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:descendantFocusability="blocksDescendants"
    android:padding="@dimen/eight"
    android:background="@drawable/devide_gray_list" >
    
    <CheckBox
        android:visibility="gone"
        android:id="@+id/cb_choice"
        android:layout_width="30dip"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:layout_gravity="center_vertical"
        android:button="@drawable/checkbox_style"
        android:focusableInTouchMode="false" />
    
    <ImageView 
		android:id="@+id/gift_image"
        android:layout_width="@dimen/sixty_five"
        android:layout_height="@dimen/sixty"
        android:src="@drawable/icon_image_default"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_name"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/eight">
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="@dimen/twenty"
            android:orientation="horizontal">
	        <TextView 
		        android:id="@+id/gift_name"
	            android:text="@string/index_news_title"
	            android:textColor="@color/black"
	            android:textSize="@dimen/t_fourteen"
	            android:layout_width="0.0dip"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:singleLine="true"/>
	        <TextView 
		        android:id="@+id/gift_time"
		        android:visibility="gone"
	            android:text="@string/gift_time"
	            android:textColor="@color/btn_color"
	            android:textSize="@dimen/ten"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"/>
	        <TextView 
		        android:id="@+id/gift_date1"
		        android:visibility="gone"
	            android:text="@string/gift_date"
	            android:textColor="@color/text_light"
	            android:textSize="@dimen/t_ten"
	            android:layout_width="wrap_content"
	            android:layout_marginLeft="@dimen/five"
	            android:layout_height="match_parent"/>
        </LinearLayout>
        <TextView 
	        android:id="@+id/gift_content"
            android:text="@string/index_news_content"
            android:textColor="@color/text_light"
            android:textSize="@dimen/t_twelve"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:layout_height="wrap_content"/>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
	        <TextView 
		        android:id="@+id/gift_distance"
	            android:text="@string/gift_distance"
	            android:textColor="@color/text_light"
	            android:textSize="@dimen/t_ten"
	            android:layout_gravity="bottom"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>
	        <TextView 
		        android:id="@+id/gift_type"
	            android:text="@string/gift_type"
	            android:textColor="@color/btn_color"
	            android:textSize="@dimen/t_ten"
	            android:layout_gravity="bottom"
	            android:layout_marginLeft="@dimen/five"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>
	        <TextView 
		        android:id="@+id/gift_label"
	            android:text="@string/gift_label"
	            android:textColor="@color/theme_color"
	            android:textSize="@dimen/t_eight"
	            android:layout_gravity="bottom"
	            android:layout_width="wrap_content"
	            android:layout_marginLeft="@dimen/five"
	            android:background="@drawable/bg_null_blue"
	            android:layout_height="wrap_content"/>
	        <View 
	            android:layout_width="0.0dip"
	            android:layout_height="fill_parent"
	            android:layout_weight="1"/>
	        <TextView 
		        android:id="@+id/gift_date2"
		        android:visibility="gone"
	            android:text="@string/gift_date"
	            android:textColor="@color/text_light"
	            android:textSize="@dimen/t_ten"
	            android:layout_gravity="bottom"
	            android:gravity="bottom"
	            android:layout_width="wrap_content"
	            android:layout_marginLeft="@dimen/five"
	            android:layout_height="25dp"/>
	        <Button 
		        android:id="@+id/gift_btn"
	            android:text="@string/gift_btn"
	            android:textSize="@dimen/t_ten"
	            android:textColor="@color/white"
	            android:background="@drawable/bg_round_red"
	            android:layout_width="75dp"
	            android:layout_height="25dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
