<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/content_background_color" >
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/fifty"
	    android:background="@color/theme_color" >
	    <ImageView
	        android:id="@+id/aci_back_btn"
	        android:layout_width="@dimen/fifty"
	        android:layout_height="match_parent"
	        android:contentDescription="@string/app_name"
	        android:padding="@dimen/ten"
	        android:src="@drawable/common_title_back"/>
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_centerInParent="true"
	        android:orientation="horizontal"
	        android:gravity="center_vertical">
		    <TextView
		        android:id="@+id/aci_title_tv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/login_in"
		        style="@style/ui_titletext" />
	    </LinearLayout>
	</RelativeLayout>
	
	<!-- 订单详情 -->
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:focusable="true"  
        android:focusableInTouchMode="true"
	   	style="@style/ui_backgrounlayoutstyle" >
	    <LinearLayout 
	        android:layout_width="fill_parent"
			android:layout_height="@dimen/forty_five"
	        android:orientation="horizontal"
	        android:gravity="center_vertical"
	        android:paddingLeft="@dimen/fifteen"
	        android:paddingRight="@dimen/fifteen"
	        android:layout_marginTop="@dimen/ten">
	        <ImageView 
	            android:src="@drawable/login_username"
	            android:contentDescription="@string/app_name"
	            android:layout_width="@dimen/twenty"
	            android:layout_height="@dimen/twenty"/>
	      	<EditText 
	      	    android:id="@+id/uu_username"
	      	    android:layout_width="fill_parent"
	      	    android:layout_height="wrap_content"
				android:hint="@string/hint_usernames"
				android:layout_marginLeft="@dimen/ten"
                style="@style/edit_text"
	      	    android:inputType="textPersonName"/>
	    </LinearLayout>
	    <View 
	        android:layout_width="fill_parent"
	        android:layout_height="@dimen/one"
	        android:background="@color/lgrey"/>
	    <LinearLayout 
	        android:layout_width="fill_parent"
			android:layout_height="@dimen/forty_five"
	        android:orientation="horizontal"
	        android:gravity="center_vertical"
	        android:paddingLeft="@dimen/fifteen"
	        android:paddingRight="@dimen/fifteen">
	        <ImageView 
	            android:src="@drawable/login_password"
	            android:contentDescription="@string/app_name"
	            android:layout_width="@dimen/twenty"
	            android:layout_height="@dimen/twenty"/>
	      	<EditText 
	      	    android:id="@+id/uu_password"
	      	    android:layout_width="fill_parent"
	      	    android:layout_height="wrap_content"
				android:hint="@string/hint_password"
				android:layout_marginLeft="@dimen/ten"
                style="@style/edit_text"
	      	    android:inputType="textPassword"/>
	    </LinearLayout>
	    <View 
	        android:layout_width="fill_parent"
	        android:layout_height="@dimen/one"
	        android:background="@color/lgrey"/>
	    <TextView 
	        android:id="@+id/forgetpwd"
	        android:layout_width="wrap_content"
	        android:layout_height="@dimen/forty"
	        android:layout_gravity="right"
	        android:gravity="center_vertical"
	        android:textColor="@color/theme_color"
	        android:textSize="@dimen/sixteen"
	        android:text="@string/forgetpwd"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="@dimen/thirty_five"
	    android:orientation="horizontal">
	    <Button 
	        android:id="@+id/app_league_in"
	        android:layout_width="@dimen/one_hundred_thirty"
	        android:layout_height="@dimen/thirty_five"
	        android:background="@drawable/bg_null_blue"
	        android:textColor="@color/theme_color"
	        android:gravity="center"
	        android:text="@string/league_in"/>
	    <View 
	        android:layout_width="@dimen/thirty"
	        android:layout_height="wrap_content"/>
	    <Button 
	        android:id="@+id/app_login_in"
	        android:layout_width="@dimen/one_hundred_thirty"
	        android:layout_height="@dimen/thirty_five"
	        android:background="@drawable/bg_round_blue"
	        android:textColor="@color/white"
	        android:gravity="center"
	        android:text="@string/login_in"/>
	</LinearLayout>
	<View 
	    android:layout_width="fill_parent"
	    android:layout_height="0.0dip"
	    android:layout_weight="1"/>
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="@dimen/fifteen">
	    <View 
	        android:layout_width="fill_parent"
	        android:layout_height="@dimen/one"
	        android:layout_centerInParent="true"
	        android:background="@color/lgrey"/>
	    <TextView 
	        android:layout_width="@dimen/one_hundred_thirty"
	        android:layout_height="wrap_content"
	        android:text="@string/login_other"
	        android:gravity="center"
	        android:textSize="@dimen/sixteen"
	        android:background="@color/content_background_color"
	        android:layout_centerInParent="true"
	        android:textColor="@color/edit_hint_color"/>
	</RelativeLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:padding="@dimen/fifteen">
	    <TextView 
	        android:id="@+id/login_weibo"
		    android:layout_width="0.0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:gravity="center_horizontal"
		    android:text="@string/login_weibo"
		    android:drawablePadding="@dimen/ten"
	        android:drawableTop="@drawable/login_weibo"/>
	    <TextView 
	        android:id="@+id/login_qq"
		    android:layout_width="0.0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:gravity="center_horizontal"
		    android:text="@string/login_qq"
		    android:drawablePadding="@dimen/ten"
	        android:drawableTop="@drawable/login_qq"/>
	    <TextView 
	        android:id="@+id/login_weixin"
		    android:layout_width="0.0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:gravity="center_horizontal"
		    android:text="@string/login_weixin"
		    android:drawablePadding="@dimen/ten"
	        android:drawableTop="@drawable/login_weixin"/>
	</LinearLayout>
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="@dimen/fifteen">
	    <TextView 
	        android:id="@+id/login_quickly"
		    android:text="@string/login_quickly"
		    android:textColor="@color/theme_color"
		    android:gravity="center"
		    android:layout_width="@dimen/one_hundred_thirty"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:background="@drawable/bg_null_blue"/>
	    <TextView 
	        android:id="@+id/login_register"
	        android:layout_marginRight="@dimen/fifteen"
		    android:text="@string/login_register"
		    android:textColor="@color/edit_hint_color"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	        android:textSize="@dimen/sixteen"
		    android:layout_toLeftOf="@id/login_quickly"/>
	</RelativeLayout>
</LinearLayout>