<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/ten"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="@dimen/twenty_five"
        android:orientation="horizontal">
        <TextView 
	     	android:id="@+id/record_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/record_name"
	        android:textSize="@dimen/t_sixteen"/>
        <View 
	        android:layout_width="0.0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"/>
        <TextView 
	     	android:id="@+id/record_money"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/record_money"
	        android:textColor="@color/gift_btn_red"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="@dimen/twenty_five"
        android:orientation="horizontal"
        android:gravity="bottom">
	    <TextView 
	     	android:id="@+id/gift_label"
	        android:text="@string/gift_label"
	        android:textColor="@color/theme_color"
	        android:textSize="@dimen/t_twelve"
	        android:layout_width="wrap_content"
	        android:background="@drawable/bg_null_blue"
	        android:layout_height="wrap_content"/>
        <View 
	        android:layout_width="0.0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"/>
        <TextView 
            android:id="@+id/record_address"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/btn_dgrey"
	        android:text="@string/record_address"/>
    </LinearLayout>
</LinearLayout>
