<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<com.zykj.xishuashua.view.MyCommonTitle
        android:id="@+id/aci_mytitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:padding="@dimen/eight"
	    android:orientation="horizontal" >
	    <ImageView 
	        android:layout_width="@dimen/sixty"
	        android:layout_height="@dimen/sixty"
	        android:src="@drawable/comment_img"
	        android:scaleType="fitXY"
	        android:contentDescription="@string/app_name"/>
	
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginLeft="@dimen/eight">
	        <TextView 
		        android:id="@+id/comment_name"
	            android:text="@string/comment_name"
	            android:textColor="@color/grey"
            	android:textSize="@dimen/t_seventeen"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>
	        <TextView 
		        android:id="@+id/comment_time"
	            android:text="@string/comment_time"
	           	android:textColor="@color/grey"
	           	android:gravity="top"
	            android:textSize="@dimen/t_ten"
	            android:layout_width="wrap_content"
	           	android:layout_height="@dimen/eighteen"/>
	        <TextView 
		        android:id="@+id/comment_content"
	            android:text="@string/comment_content"
	            android:textColor="@color/black"
	            android:gravity="center_vertical"
	            android:textSize="@dimen/t_eighteen"
	            android:layout_width="match_parent"
	            android:layout_height="@dimen/twenty_five"/>
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:background="@color/lgrey">
	            <ImageView 
	                android:src="@drawable/t_new_img"
	                android:scaleType="fitXY"
		            android:layout_width="@dimen/sixty"
		            android:layout_height="@dimen/sixty"
		            android:contentDescription="@string/app_name"/>
	            <TextView 
	                android:text="@string/index_news_content"
	                android:padding="@dimen/five"
	                android:textSize="@dimen/fifteen"
	                android:maxLines="2"
	                android:gravity="center_vertical"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"/>
	        </LinearLayout>
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="@dimen/twenty_five"
	            android:gravity="bottom"
	            android:orientation="horizontal">
		        <View 
		            android:layout_width="0.0dip"
	            	android:layout_height="@dimen/eighteen"
	            	android:layout_weight="1"/>
	            <com.zykj.xishuashua.view.MyCheckBox
		            app:drawable_size="12dp"
		            style="@style/box_button"
		            android:layout_marginRight="@dimen/ten"
	                app:drawableLeft="@drawable/msg_dw_comment"
	                android:text="@string/message_number"/>
	            <com.zykj.xishuashua.view.MyCheckBox 
		            app:drawable_size="12dp"
		            style="@style/box_button"
	                app:drawableLeft="@drawable/msg_dw_laud"
	                android:text="@string/message_number"/>
	        </LinearLayout>
			<TextView 
	        	android:text="@string/hot_comment"
	        	android:textSize="@dimen/t_twelve"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
			<com.zykj.xishuashua.view.XListView 
			    android:id="@+id/msg_listview"
				android:layout_width="match_parent"
				android:layout_height="match_parent"/>
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>
